--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,77 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap");
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: "Poppins", sans-serif;
+  background-color: whitesmoke;
+}
+
+.App {
+  margin: 50px auto;
+  padding: 30px;
+  width: 50%;
+  min-width: 500px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid #efefef;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15), 0 10px 0 -5px #eee,
+    0 10px 1px -4px rgba(0, 0, 0, 0.15), 0 20px 0 -10px #eee,
+    0 20px 1px -9px rgba(0, 0, 0, 0.15);
+  background-color: white;
+}
+
+h1 {
+  margin-bottom: 15px;
+}
+
+input {
+  margin-bottom: 15px;
+  padding: 5px;
+  width: 80%;
+}
+
+.button {
+  margin-bottom: 15px;
+  padding: 8px;
+  border: none;
+  border-radius: 7px;
+  font-weight: bold;
+  background-color: teal;
+  color: white;
+}
+
+.tasksList {
+  padding: 15px 30px;
+  width: 85%;
+}
+
+.item {
+  width: 85%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  line-height: 2.5em;
+  border-bottom: 1px solid #cccccc;
+}
+
+.item li {
+  width: 100%;
+  min-width: 250px;
+  overflow-wrap: break-word;
+}
+
+.item button {
+  margin-left: 20px;
+  padding: 5px;
+  min-width: 35px;
+  height: 25px;
+  border: none;
+  border-radius: 7px;
+  background-color: #ff6666;
 }
